version/0.12/_sources/api/solver/_autosummary/settings/cavitation.rst.txt
:orphan:

.. _cavitation:

cavitation
==========

.. currentmodule:: ansys.fluent.core.solver.settings_231.cavitation

.. autoclass:: cavitation
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

====================================================================================   ==================================================================================================================

Child                                                                                                                                                                                             Summary

====================================================================================   ==================================================================================================================
:ref:`schnerr_evap_coeff <schnerr_evap_coeff>`                                                                                                           Evaporation coefficient for Schnerr-Sauer model.

:ref:`schnerr_cond_coeff <schnerr_cond_coeff>`                                                                                                          Condensation coefficient for Schnerr-Sauer model.

:ref:`max_vapor_pressure_ratio <max_vapor_pressure_ratio>`                                                                       Maximum limit on vapor pressure after turbulence and thermal correction.

:ref:`min_vapor_pressure <min_vapor_pressure>`                                                                                                         Minimum vapor pressure limit for cavitation model.

:ref:`display_clipped_pressure <display_clipped_pressure>`                                       Clipped pressure is just used for the properties evaluation. Mass Transfer Rate uses unclipped pressure.

:ref:`turbulent_diffusion <turbulent_diffusion>`                                                                  New turbulent diffusion treatment is applicable to N-phase flow when one of the phases 

:ref:`old_treatment_for_turbulent_diffusion <old_treatment_for_turbulent_diffusion>`       Old turbulent diffusion treatment is applicable to two phase flow when vapor is selected as a secondary phase.

====================================================================================   ==================================================================================================================

.. rubric:: Included in:

==============================================   =======================================================================

Parent                                                                                                           Summary

==============================================   =======================================================================
:ref:`heat_mass_transfer <heat_mass_transfer>`       Multiphase interphase heat and mass transfer numerics options menu.

==============================================   =======================================================================

